# Python-BTCoreSharedLibs

./: setup.cfg  setup.py
.github/workflows/: publish.yml
src/CoreSharedLibs/: csl.py
