[metadata]
name = BTCoreSharedLibs
description = A package of functions that I keep writing over and over again, so I can stop doing that. Script based on seanh example.
long_description_content_type = text/markdown
url = https://github.com/Jtecx/Python-BTCoreSharedLibs
project_urls =
    Bug Tracker = https://github.com/Jtecx/Python-BTCoreSharedLibs/issues
    Changelog = https://github.com/Jtecx/Python-BTCoreSharedLibs/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU3 License
    Intended Audience :: Developers

[options]
package_dir =
    = CoreSharedLibs
packages = find:
python_requires = >=3.10

[options.packages.find]
where = CoreSharedLibs

[options.entry_points]
console_scripts =
    gha_python_packaging_demo = CoreSharedLibs.app:entry_point
